--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
           <h1>教えてRunペース</h1>
         </div>
         <div class="col-sm-6 align-right">
-          <a href="file:index.html">HOMEへ戻る</a>
+          <a href="/index.html">HOMEへ戻る</a>
         </div>
       </div>
     </header>
@@ -26,7 +26,7 @@
     <hr>
 
     <div class="container">
-      <form action="file:racetime.html" method="post" class="row">
+      <form action="/racetime.html" method="post" class="row">
 
         
         <div class="col-sm-8 col-sm-offset-2">
