--- a/racetime.html
+++ b/racetime.html
@@ -19,7 +19,7 @@
             <h1>レースタイム予想</h1>
           </div>
           <div class="col-sm-6 align-right">
-            <a href="file:///C:/Users/Junya%20Kuba/Desktop/programing/RunningSimuratorProject/public/index.html">HOMEへ戻る</a>
+            <a href="index.html">HOMEへ戻る</a>
           </div>
         </div>
       </header>
